--- a/app/src/main/res/layout/card_cell.xml
+++ b/app/src/main/res/layout/card_cell.xml
@@ -12,7 +12,8 @@
         app:cardCornerRadius="20dp"
         android:layout_margin="10dp"
         android:clickable="true"
-        app:cardElevation="7dp">
+        app:cardElevation="7dp"
+        android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,7 +36,7 @@
                 android:text="@string/movie_title"
                 android:lines="2"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textStyle="bold"/>
 
             <TextView
@@ -45,7 +46,7 @@
                 android:gravity="center"
                 android:text="@string/director"
                 android:textColor="@color/dark_grey"
-                android:lines="1"
+                android:lines="2"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
 
