--- a/app/src/main/res/layout/fragment_now_showing.xml
+++ b/app/src/main/res/layout/fragment_now_showing.xml
@@ -6,9 +6,15 @@
     tools:context=".NowShowing">
 
     <!-- TODO: Update blank fragment layout -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recyclerView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Testing bar"-->
+<!--        android:gravity="center"/>-->
 
 </FrameLayout>
