--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+<!--    <item-->
+<!--        android:title="Home"-->
+<!--        android:icon="@drawable/ic_baseline_home_24"-->
+<!--        android:id="@+id/home"-->
+<!--        />-->
     <item
-        android:title="Home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:id="@+id/home"
-        />
-    <item
-        android:title="Now Showing"
+        android:title="@string/now_showing"
         android:icon="@drawable/ic_baseline_play_circle_outline_24"
         android:id="@+id/nowShowing"/>
-    <item
-        android:title="Coming Soon"
-        android:icon="@drawable/ic_baseline_access_time_24"
-        android:id="@+id/comingSoon"/>
+
 </menu>
