--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,10 +23,10 @@
     </androidx.cardview.widget.CardView>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
@@ -35,43 +35,89 @@
             android:text="@string/movie_title"
             android:textStyle="bold"
             android:textSize="25sp"
-            android:padding="20sp"/>
-
+            android:padding="15sp"/>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginStart="5sp"
             android:padding="5dp"
-            android:layout_marginTop="15sp"
-            android:layout_marginEnd="5sp">
+            android:layout_marginTop="10sp"
+            android:layout_marginEnd="5sp"
+            android:layout_marginBottom="10sp">
 
-            <TextView
-                android:id="@+id/director"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/directed_by"
-                android:textSize="15sp"
-                android:textStyle="normal"/>
-            <TextView
-                android:id="@+id/duration"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/director1"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="5sp"/>
+
+                <TextView
+                    android:id="@+id/director"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/director"
+                    android:textSize="15sp"
+                    android:textStyle="normal"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cast"
-                android:textSize="15sp"
-                android:textStyle="normal"/>
-            <TextView
-                android:id="@+id/release_date"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/casts"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="5sp"/>
+
+                <TextView
+                    android:id="@+id/cast"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cast"
+                    android:textSize="15sp"
+                    android:textStyle="normal"/>
+
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/release_year"
-                android:textSize="15sp"
-                android:textStyle="normal"/>
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/released_in"
+                    android:layout_marginEnd="5sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/release_year"
+                    android:textSize="15sp"
+                    android:textStyle="normal"/>
+
+            </LinearLayout>
 
 
 
-    </LinearLayout>
+            </LinearLayout>
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
