--- a/app/src/main/res/layout/card_cell.xml
+++ b/app/src/main/res/layout/card_cell.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="20dp"
-        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp"
+        android:layout_margin="5dp"
         android:clickable="true"
         app:cardElevation="7dp"
         android:focusable="true">
@@ -24,7 +24,7 @@
                 android:id="@+id/poster"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/tdk"
+                android:src="@drawable/tdkbanner"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/poster"/>
 
@@ -35,8 +35,8 @@
                 android:gravity="center"
                 android:text="@string/movie_title"
                 android:lines="2"
-                android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textColor="@color/purple_700"
+                android:textSize="15sp"
                 android:textStyle="bold"/>
 
             <TextView
@@ -47,7 +47,7 @@
                 android:text="@string/director"
                 android:textColor="@color/dark_grey"
                 android:lines="2"
-                android:textSize="20sp"
+                android:textSize="12sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
