--- a/app/src/main/res/navigation/nav_bar.xml
+++ b/app/src/main/res/navigation/nav_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_bar"
-    app:startDestination="@+id/home">
+    app:startDestination="@+id/nowShowing">
 <!--    <fragment-->
 <!--        android:id="@+id/home"-->
 <!--        android:name="com.example.movieapp.home"-->
