--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="dark_blue">#0E1824</color>
     <color name="dark_grey">#5A5A5A</color>
     <color name="mainYellow">#EACA55</color>
     <color name="purple_200">#FFBB86FC</color>
